--- a/cpu/config.cfg
+++ b/cpu/config.cfg
@@ -1,3 +1,4 @@
-PUERTO_POKEDEX=8080
-DISCO_OSADA=basic.bin
-IP=127.0.0.1
+IP_KERNEL=127.0.0.1
+PUERTO_KERNEL=8080
+IP_MEMORIA=127.0.0.1
+PUERTO_MEMORIA=8081
