--- a/kernel/config.cfg
+++ b/kernel/config.cfg
@@ -1,2 +1,12 @@
 IP=127.0.0.1
-PUERTO=8081
+PUERTO_PROG=8090
+PUERTO_CPU=8082
+IP_MEMORIA=127.0.0.1
+IP_FS=127.0.0.1
+QUANTUM_SLEEP=1
+QUANTUM=1
+ALGORITMO=FIFO
+GRADO_MULTIPROG=2
+SEM_IDS=[SEM1,SEM2,SEM3]
+SEM_INIT=[0,0,5]
+SHARED_VARS=[!Ga,!Ba,!Ca]
