--- a/fileSystem/.project
+++ b/fileSystem/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>commons</project>
+		<project>blue4-lib</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
